temporary-datastore-elasticsearch/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: temporary-elasticsearch
  namespace: ndc-prod
  labels:
    application: temporary-elasticsearch
spec:
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  selector:
    deploymentConfig: temporary-elasticsearch
  sessionAffinity: None
