temporary-datastore-elasticsearch/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: temporary-elasticsearch
  namespace: ndc-prod
  labels:
    application: temporary-elasticsearch
spec:
  to:
    kind: Service
    name: temporary-elasticsearch
    weight: 100
  port:
    targetPort: 9200
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
